Vue router init. Sources working

--- a/.docksal/docksal.env
+++ b/.docksal/docksal.env
@@ -1,5 +1,7 @@
-DOCKSAL_STACK=default
-DOCROOT=.
+DOCKSAL_STACK=node
+DOCROOT=rk/public
 DOCKSAL_VOLUMES=bind
-VIRTUAL_HOST="rk.bioshazard.com"
-VIRTUAL_HOST_CERT_NAME="rk.bioshazard.com"
+COMPOSE_PROJECT_NAME=rootkit
+VIRTUAL_HOST=rootkit.docksal
+#VIRTUAL_HOST="rk.bioshazard.com"
+#VIRTUAL_HOST_CERT_NAME="rk.bioshazard.com"
