--- a/rk2/package.json
+++ b/rk2/package.json
@@ -13,7 +13,8 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-gun": "0.0.3",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-uuid": "^2.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
