--- a/rk2/package.json
+++ b/rk2/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "gun": "^0.2020.520",
+    "es6-promise": "^4.2.8",
+    "eslint-loader": "^4.0.2",
+    "gun": "github:amark/gun#master",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-gun": "0.0.3",
     "vue-router": "^3.2.0",
-    "vue-uuid": "^2.0.2"
+    "vue-uuid": "^2.0.2",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -26,5 +29,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": ".eslintrc.js",
+  "author": "",
+  "license": "ISC"
 }
