--- a/rk2/package.json
+++ b/rk2/package.json
@@ -15,6 +15,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-gun": "0.0.3",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.2.0",
     "vue-uuid": "^2.0.2",
     "vuex": "^3.5.1"
